tests/purs/failing/InvalidDerivedInstance3.out
Error found:
at tests/purs/failing/InvalidDerivedInstance3.purs:10:1 - 10:40 (line 10, column 1 - line 10, column 40)

  Type synonym [33mMain.S[0m is partially applied.
  Type synonyms must be applied to all of their type arguments.


See https://github.com/purescript/documentation/blob/master/errors/PartiallyAppliedSynonym.md for more information,
or to contribute content related to this error.

